Fixing map alignment

--- a/styles/components/_locations.scss
+++ b/styles/components/_locations.scss
@@ -44,4 +44,8 @@ $locations-max-width: 750px;
       font-size: 12px;
     }
   }
+
+  .map {
+    text-align: center;
+  }
 }
